# ChangeLog for dev-python/pylint
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pylint/ChangeLog,v 1.122 2015/03/22 08:12:18 patrick Exp $

  22 Mar 2015; Patrick Lauer <patrick@gentoo.org> -pylint-0.23.0.ebuild,
  -pylint-0.25.2.ebuild, pylint-1.4.3.ebuild:
  Fix astroid dep, remove old

*pylint-1.4.3 (19 Mar 2015)

  19 Mar 2015; Patrick Lauer <patrick@gentoo.org> +pylint-1.4.3.ebuild:
  Bump

  08 Mar 2015; Pacho Ramos <pacho@gentoo.org> pylint-1.4.1.ebuild:
  x86 stable, bug 540290

  07 Mar 2015; Pacho Ramos <pacho@gentoo.org> pylint-1.4.1.ebuild:
  ppc stable, bug 540290

  07 Mar 2015; Pacho Ramos <pacho@gentoo.org> pylint-1.4.1.ebuild:
  ppc64 stable, bug 540290

  06 Mar 2015; Pacho Ramos <pacho@gentoo.org> pylint-1.4.1.ebuild:
  amd64 stable, bug 540290

  27 Jan 2015; Mike Frysinger <vapier@gentoo.org> pylint-1.4.1.ebuild:
  Fix dependencies to reflect the source requirements.

*pylint-1.4.1 (26 Jan 2015)

  26 Jan 2015; Patrick Lauer <patrick@gentoo.org> +pylint-1.4.1.ebuild:
  Bump

  15 Dec 2014; Ian Delaney <idella4@gentoo.org> -pylint-0.28.0.ebuild,
  -pylint-1.1.0.ebuild, -pylint-1.2.1.ebuild, pylint-1.4.0.ebuild:
  add missing dep, rm old

*pylint-1.4.0 (10 Dec 2014)

  10 Dec 2014; Patrick Lauer <patrick@gentoo.org> +pylint-1.4.0.ebuild:
  Bump

*pylint-0.25.2 (18 Nov 2014)

  18 Nov 2014; Matthew Thode <prometheanfire@gentoo.org> +pylint-0.25.2.ebuild:
  adding old version for openstack dep

*pylint-1.3.1 (10 Sep 2014)

  10 Sep 2014; Ian Delaney <idella4@gentoo.org> +pylint-1.3.1.ebuild,
  pylint-1.3.0.ebuild:
  bump; update deps, drop redundant patches, put doc build in correct phase

  05 Aug 2014; Ian Delaney <idella4@gentoo.org> pylint-1.3.0.ebuild:
  correction to doc install, fixes Bug #519034

*pylint-1.3.0 (31 Jul 2014)

  31 Jul 2014; Ian Delaney <idella4@gentoo.org> +pylint-1.3.0.ebuild:
  bump; adjust SRC_URI, update deps, fixes Bug #518272
