@@ -1,13 +1,15 @@
 AUX pylint-0.26.0-gtktest.patch 1347 SHA256 da7d6e8e30adf52d120fcca73c4f32223efad585a09a789b0ba4e989f6041f5f SHA512 4a25a3c510da171ed661be048a6ef95c9701071833a9f64c56917d2919330f559c7877885e9da41614868d040ca8a27358a73717e96d597fe8a2a0753eab23a1 WHIRLPOOL d35c62166ae332d73d629a56f25694607c5c2955723be3549b256c80aec55a5dfe9ed65f922d180946757a2c9d5275fb9f9e787cd8aaac7e909d73af602ad269
+DIST pylint-0.25.2.tar.gz 214769 SHA256 08c2a0ccf2d715cdc9a2a0478200c54aac5b4f6d521e10c5b27db65d5787ff07 SHA512 eea1a783ca52623fa2a026fe82939b8a5920b3b6be21b808388bb9336ba85aeded157198a436fcf3ab8735df6cfcf94c352b695db1131490dda2e26305be68d0 WHIRLPOOL b6a4595e14a350c9156ebb6fce3c9c35ada304f0c33659c55266534c4539f871102dfb6c601bd4e0b4a067a5695da28dcefda7e911d7d11325f4672b38dc7ecd
 DIST pylint-1.3.0.zip 467305 SHA256 428fad302eacadec979d267df1ba55047d997a99b26d69624964d2b7412d09be SHA512 3274181818b6f8cae6765edaed0d630e88c84b615979c25da2718949fba868d593fa96ff64effdf181c86a71d2f73ab3163bf8835de9cf7e78bb5be6cbf3e641 WHIRLPOOL c6eae20fc18b37da5d691246dd6627deed372810897be0cee4bb23c0f0ddfabe8eb774e93c89e9ef1fc6ab24c40a702089cf1e1fad6eaf22e38fca10c8281b02
 DIST pylint-1.3.1.zip 471013 SHA256 aff686868c2f557fa68c97c164f60bca88cdc2d56c0ca189370c30307a378b8d SHA512 fb9a50a86746ef66bc6b0d7eea10a4e91116819285e4640c9ff25b9d1ef351420f6dba9bc7ae7ef7a927bc7a3fc8ce8b1e5634370c7f30e9c7ea2441b960d79e WHIRLPOOL 114410bc0abdc0cecca3c517f8f4bcbfc7db33a9f5947eb9f9f7b8d335059847bb14cc95697b3df8c62fdb99bc500717aff5ab0bee4d790914423cd6ae4302e6
 DIST pylint-1.4.0.tar.gz 331577 SHA256 816646b9d5fd0c33f9e3b009953c46727d22bec3e880712d69b39b1b630fa3ca SHA512 b221390076c337a9ef14ef848cfa911f4d0217d7a39a0b0ebc2b556974a33d44381e15746c117ef4b7dcd87acca45f07894aa2db4cf3fe2b70228d570b89725c WHIRLPOOL d71264f76c9c49e22b8943705b0169548d9c69413527583ec95613eb9d5419e6175169cc25c791de94588617f6ac567668036192317fdcc5020511fddab99f78
 DIST pylint-1.4.1.tar.gz 338636 SHA256 3e383060edd432cbbd0e8bd686f5facfe918047ffe1bb401ab5897cb6ee0f030 SHA512 019405c16ef731f83c12e2b0a7f4b3fc2e17f35df50a18dbbc084ed14450a070e689850b8d7761e2fba0d2a8f6c70ef06709de5b96e59af7da9cc6cc412bbf25 WHIRLPOOL ae88953c5c43960438abf87e3c730afda220afae697cc6fc985372ddf8b0f94c018850800f6001e93e6748eee25e59e1ded2211935f3e45b55f04833acd40fb0
 DIST pylint-1.4.3.tar.gz 342509 SHA256 1dce8c143a5aa15e0638887c2b395e2e823223c63ebaf8d5f432a99e44b29f60 SHA512 63af8c72496b88db967c61d5be2b974fca053a45425ea8b5898e941be135d26c8c004b91b8b3a98337c0c5af4f5a530afbf091d7c5ecfa36bfa36aef9f843a95 WHIRLPOOL 17b08712a00c01468ca466f2f83386275a304ab7a2c8a1d223eeda8e9fd4cc4753796a354250accad9f9fcbd0aaba3562ebc794af880e49889ee1b5b2d295d0c
+EBUILD pylint-0.25.2.ebuild 1684 SHA256 602eb5529c210521e47a5f7b52fe37403fdee412cb7b2595e732018884f1c6cd SHA512 44b6f5af37484bd7ed1b8532fb2998c5554f9b43bc8e6404f070ff33485f57f5098b1d3a36389501ad749566199e1e006df507f4fd876616dcf8b93e83af05d1 WHIRLPOOL 0d0503be6963a2a9f101a4cb0a0895513737f3ac09bc496534578bcdea454c13a03e6637bbc22177c47ddfd3dcb9c2194730e524e2f7bcb61ad72da32f7e96c9
 EBUILD pylint-1.3.0.ebuild 1786 SHA256 b7bf20006025a51393ce9131b5d0040e2a69b3d2a1c05b838eb83629d6857629 SHA512 217c3dab26f9517060b9aee90ff3d0f7acfd92241f6814d9bfe7c56b68d61917c082c64915a6be0642a6bdcfc208f8450769193f3ce7804e6d0a6b1b65c36c7b WHIRLPOOL 513e30f3dc3eaf2ae4b8df69aee880090fcaef5b8c3b366bd126f6f0c8996cdd437e5bd4466433d634926f33468c7aea7ba6a6dbea98623d2d60c8bd13ac8dd8
 EBUILD pylint-1.3.1.ebuild 1719 SHA256 edc45574147e90ea9fb9c09f31b8fe7957419179cc1d572be3fdcd22acf8ce7e SHA512 d02d9b854416d56ec3f3f00b1fcc1f89339e6bd358d0b0b7545bfbd97c26928ad0e019ad7bcaf759a779f46828fe9f34fd1621f0a01ef3359679a87efff086a4 WHIRLPOOL 77d4e9cf187f2134186df2000272bf4eaf7746881d6626ebbe7998982d2ffa41aa66324c0e1eea4147dce57a920e90c0463ea898cdc9428cddff63d347382351
 EBUILD pylint-1.4.0.ebuild 1788 SHA256 316ac5f9bd416faacef2ea5e634ed7b225baff1eef953741d38d88cdba92265b SHA512 09b5cc6dbf319bfc64eb935cdcd77d3c2ce77dfb74086a6965cf5123f7676cc9ac556bc287f91c68aa22d261a7739cebe2c5870fe806f259dde227fb8a35a0e1 WHIRLPOOL b6cb5141ae30eec4b05295fb91247bb7b79053efcec65c315ca0af1d90fe2179306ff9ff0cd801b899e2873162121184ae02b944fbe0a69411379ab26c503894
 EBUILD pylint-1.4.1.ebuild 1782 SHA256 20e9da135782624145a8f902a48ed0bc523b335575f012fa416610f5442c7822 SHA512 0daaf000f67e7843e8cec75330e4046da5cb593c89e57a2f59bf77cc0ef57b8236de56b0c5381f583687f8abdc1f92b0234e1864aef030b360bde7a329a01c55 WHIRLPOOL 6d2203843601d94ef637ae9fe77f558ad845411142a1e62355c044167a1fc3bdd18b2d4d00f7f3a094daadbbfedadbd0ce82bd0ac87fe4125e26f35bb39d8ea7
 EBUILD pylint-1.4.3.ebuild 1788 SHA256 fcd1dc91593330f9550695b273c4d8c25ad006ae0e11acd3fd8a88ca69266164 SHA512 5f7f59d883a3916cb471f2628eee65664121ecbcb47a7bd219111a1ddece7024320e65cf12b46d6e399b43a448755e4b4e97004abf3cb43a627cc3a7dcf092a7 WHIRLPOOL 37ac58605cd15744920465a229b4b0e3f4663c414c9f706057e637080a05d57ca3f8f0ff723513972d99113f1fb49ab80d47efd8a6a67e2863d9dc3364079df2
-MISC ChangeLog 17387 SHA256 130eb32e71803ae4f05951fa68423f55685682d31128e2f5e65fc19a2ef5a218 SHA512 9b989e36b87445a55debde11149b54c47a32c89acbb531130d845bccabcea90b7f824c69ef4af5a3a62d6d6d4968deecde57622dd2794dc079d036b7932e2fa9 WHIRLPOOL 32325f0302a3c9d5fe9ed36a737195d869b03f2715860d5ebf9c4120389124e68a5b4bb52ec1c9a9d5c5f93e92f308918023a5eb9f37f1bc41bebae3446cc30e
+MISC ChangeLog 17544 SHA256 169fd47da065c60583f84489cd81f571389dca0487268876fb38b09c6c462a17 SHA512 0d08ad7e1d9d01831da9dc7208c381b475a40e75dcb5eeb74822409240ca4afa5225c059dbced630323b0535e2c6f852d0287537ccc083a44b9fd5661594c60e WHIRLPOOL 11903e51adcd2910d4ee3be11279759c9f2ed0caf4a21a42007021bb5e10b271d01a4301fb5ae217f1e93cf0afae05a351e9cbebd4650c266384e828480cd616
 MISC metadata.xml 911 SHA256 31277b9fbb2bc54ed393606db53ca27064a6630442888a49372182ffa5b35769 SHA512 32830784d22e7a12405a6f3598d7c906b5abeda041594d8dfdb203b5db4e07c82a11e91a30262f33843af56aae97ba820215e0330ad7b29a70cfae7ab9503dd1 WHIRLPOOL 8be51d0debfc22b065a709405195a9ed76baec85091e3a7f6f4e59811dcf9b195aaf764830801e531260803f3a01ecaf48c89bd3e457823370be26ab70988bae
