@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/pylint
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pylint/ChangeLog,v 1.122 2015/03/22 08:12:18 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pylint/ChangeLog,v 1.123 2015/03/23 05:28:21 patrick Exp $
+
+*pylint-0.25.2 (23 Mar 2015)
+
+  23 Mar 2015; Patrick Lauer <patrick@gentoo.org> +pylint-0.25.2.ebuild:
+  Readd 0.25 as dependency of dev-python/oslo-vmware
 
   22 Mar 2015; Patrick Lauer <patrick@gentoo.org> -pylint-0.23.0.ebuild,
   -pylint-0.25.2.ebuild, pylint-1.4.3.ebuild:
